# goodcommit

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: testing.yml
src/: lib.rs  main.rs
