[package]
name = "git-busy"
version = "1.0.0"
edition = "2021"
authors = ["Dan Draper <coderdan>", "Dominik Wilkowski <Hi@Dominik-Wilkowski.com>"]
license = "GPL-3.0-or-later"
description = "A wrapper around git commit that generates the commit messages for you"
readme = "README.md"
homepage = "https://github.com/coderdan/goodcommit"
repository = "https://github.com/coderdan/goodcommit"
keywords = ["cli", "git", "commit", "gpt3", "AI"]
categories = ["command-line-interface", "command-line-utilities", "science", "text-processing"]

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }
dialoguer = "0.10.2"
edit = "0.1.4"
exitcode = "1.1.2"

[dev-dependencies]
temp-env = "0.3.1"
